Connected to database using dapper. working on an show for all the hamsters

--- a/HamsterWars/appsettings.json
+++ b/HamsterWars/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "HamsterWars": "Server=(localdb)\\mssqllocaldb;Database=HamsterWars;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "Default": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=HamsterWar;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   }
 }
