--- a/HamsterWars/HamsterWars.csproj
+++ b/HamsterWars/HamsterWars.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -29,7 +29,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Application\HamsterWars.Application.csproj" />
-    <ProjectReference Include="..\DataAccessLibrary\HamsterWars.DataAccessLibrary.csproj" />
+    <ProjectReference Include="..\DataAccessLibrary\DataAccessLibrary.csproj" />
   </ItemGroup>
 
 </Project>
